--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,9 @@ input {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.weather-map {
+  position: relative;
+  margin: 2% auto;
+  width: 80%;
+  height: fit-content;
+}
