--- a/src/App.css
+++ b/src/App.css
@@ -33,20 +33,19 @@ input {
 }
 
 .Results {
-  background-color: white;
-  margin-left: 35%;
-  margin-right: 35%;
-  margin-top: 20px;
-  border-radius: 8px;
-  color: black;
-  padding: 1.5%;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  width: 75%;
+  height: 400px;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .weather-container {
   margin: 0 auto;
   color: #fff;
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .icon {
@@ -338,4 +337,98 @@ input {
   margin: 2% auto;
   width: 80%;
   height: fit-content;
+}
+
+
+
+
+
+
+.weather-cotainer-left{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 70px;
+  margin-left: 90px;
+}
+
+.weather-status{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 90px;
+
+}
+
+.weather-status p {
+  font-size: 2.5rem;
+}
+
+
+#temp{
+  margin: 0;padding: 0;
+  font-size: 6rem;
+  font-weight: 250;
+}
+
+.weather-cotainer-right{
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-left: 150px;
+  margin-top: 70px;
+}
+
+.weather-infos{
+  width: 50%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: start;
+  margin-bottom: 50px;
+}
+
+.weather-info-heading{
+  font-size: 2.5rem;
+  font-weight: 250;
+  text-align: start;
+  margin: 0;padding: 0;
+}
+
+.weather-info-values{
+  font-size: 2rem;
+  font-weight: 250;
+  text-align: start;
+  margin: 0;padding: 0;
+  margin-top: 20px;
+}
+
+.Results-overlay{
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.565);
+  border-radius: inherit;
+}
+
+.weather-map-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.weather-map-container-wrapper{
+  display: flex;
+  width: 98%;
+
+}
+.map{
+  width: 32%;
+  height: 100%;
+  margin-left: 20px;
 }
