--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ input {
 }
 
 .Results {
-  width: 75%;
-  max-height: 360px;
+  width: 900px;
+  max-height: 50vh;
   border-radius: 20px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -336,9 +336,12 @@ input {
   width: 32%;
   margin-left: 20px;
 }
-
-
-
+@media (max-width: 1504px) {
+  .weather-map{
+    width: 100%;
+    margin-top: 30px;
+  }
+}
 
 
 
@@ -420,6 +423,9 @@ input {
 }
 .weather-map-container-wrapper{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   width: 90%;
 }
 
@@ -456,6 +462,7 @@ input {
   justify-content: center;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #737171;
+  margin-bottom: 30px;
 }
 
 .Item-container:hover{
@@ -471,4 +478,27 @@ input {
   font-size: 2.5rem;
   font-weight: bold;
   color: black;
+}
+
+
+@media (max-width:966px) {
+  .Items-to-bring h2{
+    font-size: 2rem;
+  }  
+  .weather-info-heading{
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  .weather-container{
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .Results{
+    max-height: 600px !important;
+  }
+  #temp{
+    font-size: 3rem;
+    margin-top: 50px;
+  }
 }
