--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,9 @@ body {
 }
 
 .logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  margin-top: 20px;
+  margin: 0 auto;
+  max-height: 80%;
+  width: auto;
 }
 
 .input-icon {
