--- a/src/App.css
+++ b/src/App.css
@@ -351,21 +351,14 @@ input {
 }
 
 .weather-status {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 90px;
-}
-
-.weather-status p {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 #temp {
   margin: 0;
   padding: 0;
-  font-size: 6rem;
-  font-weight: 250;
+  font-size: 5rem;
+  font-weight: bold;
 }
 
 .weather-cotainer-right {
@@ -378,40 +371,25 @@ input {
   margin-top: 70px;
 }
 
-.weather-infos {
-  width: 50%;
-  height: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  text-align: start;
-  margin-bottom: 50px;
+.Results {
+  color: white;
 }
 
 .weather-info-heading {
-  font-size: 2.5rem;
-  font-weight: 250;
-  text-align: start;
-  margin: 0;
-  padding: 0;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 .weather-info-values {
-  font-size: 2rem;
-  font-weight: 250;
-  text-align: start;
-  margin: 0;
-  padding: 0;
-  margin-top: 20px;
+  font-size: 1.1rem;
 }
 
-.Results-overlay {
+/* .Results-overlay {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.303);
   border-radius: inherit;
-}
+} */
 
 .weather-map-container {
   display: flex;
