footer background added

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,6 +9,7 @@
     align-items: center;
     box-shadow: 0px 0px 10px black;    
     background-color: #133667;
+    background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
 }
   
 .text-center {
